# Qwen-3-TTS-accel

./: .gitignore  Dockerfile  LICENSE  README.md  README_ZH.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
qwen3tts_accel/: __init__.py  api_server.py  audio.py  auth.py  pipeline.py  schemas.py
qwen3tts_accel/benchmarks/: __init__.py  compare.py
qwen3tts_accel/decode/: __init__.py  codec_decode.py
qwen3tts_accel/direct/: __init__.py  main_talker_runner.py
qwen3tts_accel/preprocess/: __init__.py  preprocessor.py
qwen3tts_accel/state/: __init__.py  sequence_state.py
qwen3tts_accel/subtalker/: __init__.py  cuda_graph.py
qwen3tts_accel/vllm/: __init__.py  config.py  plugin.py  runner.py
tests/: test_api_server.py  test_project_shape.py  test_runtime.py  test_streaming_runner.py
