[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3tts-accel"
version = "0.1.0"
description = "Optimization-focused Qwen3-TTS framework with CUDA Graph subtalker acceleration and a vLLM main-talker plugin"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yijie Huang" },
]
keywords = ["tts", "qwen3", "inference", "cuda-graph", "vllm", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "numpy",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
vllm = [
    "qwen_tts",
    "transformers>=4.40",
    "vllm>=0.6",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
all = [
    "qwen3tts-accel[vllm,dev]",
]

[project.urls]
Homepage = "https://github.com/yijie-huang/qwen3-tts-streaming"
Repository = "https://github.com/yijie-huang/qwen3-tts-streaming"

[tool.setuptools.packages.find]
include = ["qwen3tts_accel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
